--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@
     --primary-font-color: oklab(95% 0 0);
     --secondary-font-color: oklab(75% 0 0);
     --border-color: oklab(40% 0 0);
-    --shadow-color: oklab(100% 0 0 / 0.05);
+    --shadow-color: oklab(0% 0 0 / 0.5);
 }
 
 body {
@@ -220,4 +220,17 @@ ul li {
     cursor: pointer;
     font-size: 1rem;
     color: var(--secondary-font-color);
+}
+
+
+
+
+@media (max-width: 1000px) {
+
+    body {
+        padding: 10% 5%;
+    }
+
+
+
 }
